--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainMap.MainMap
 EditorStartupMap=/Game/Maps/MainMap.MainMap
-GlobalDefaultGameMode="/Script/Task8.Task8GameMode"
+GlobalDefaultGameMode=/Game/BP/BP_MyGameMode.BP_MyGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
