--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MainMap.MainMap
-EditorStartupMap=/Game/Maps/MainMap.MainMap
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/BP/BP_MyGameMode.BP_MyGameMode_C
 
 [/Script/Engine.RendererSettings]
